@@ -16,3 +16,27 @@ Transform {
     }
   }
 }
+
+Transform {
+	translation -2.5 0 0
+  children Shape {
+    appearance Appearance {
+      material Material { emissiveColor 1 0 0 }
+    }
+    geometry Circle2D {
+      radius -1
+    }
+  }
+}
+
+Transform {
+ 	translation 2.5 0 0
+ children Shape {
+    appearance Appearance {
+      material Material { emissiveColor 1 0 0 }
+    }
+    geometry Circle2D {
+      radius 3
+    }
+  }
+}
