@@ -46,7 +46,7 @@ Description: Titania X3D Viewer
  is a full standard X3D viewer for future releases of Gnome. It aims to implement
  the VRML standard for version 1.0.
  .
- It can be used as a simple 3D viewer for .wrl files, a high quality 3D animation
+ It can be used as a simple 3D viewer for .wrl files, as high quality 3D animation
  rendering engine, for advanced science simulations, live data visualisation, or 
  as easy to use gaming engine.
  .
