@@ -1,3 +1,15 @@
+2013-02-08  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Router.cpp:
+	* X3DBaseNode.h:
+	* FlyViewer.cpp:
+	* ExamineViewer.cpp:
+	* X3DFieldDefinition.h:
+	* Arc2D.cpp:
+	* Disk2D.cpp:
+	* Circle2D.cpp:
+	* ArcClose2D.cpp: 
+
 2013-02-07  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Makefile.am:
